# bellman_ce_bug

./: Cargo.toml  README.md  invalid.txt  test.sh  valid.txt
circuits/: Test2.r1cs  Test2.vk  Test2.wasm  Test2.wtns  input.json
src/: lib.rs  main.rs  plonk.rs  utils.rs
